2000-10-10  Larry Jones  <larry.jones@sdrc.com>

	* server.c (pserver_authenticate_connection): Give a real error
	message for an invalid repository.

2000-10-06  Derek Price  <derek.price@openavenue.com>

	* add.c (add): Made quiet mode affect some warning messages as seemed
	appropriate.  Specifically, some of the messages which a user might
	want to ignore so they don't have to be quite so specific on the
	command line: files added twice, files already in the repository and
	check out properly (i.e. but picked up by 'cvs add *'), & files which
	are readded in place of a dead revision or onto a branch.  '-q' will
	not change the non-zero exit code for the cases where at least one
	passed in file name was already in the Entries file.  There seems to
	be a precedent in remove.c.
	* remove.c (cvsremove): switched the "use cvs ci to make these changes
	permanent message" to only print w/o '-Q' to match the new behavior of
	add.  This seems appropriate as '-Q' is defined to restrict messages
	to critical errors.
	* sanity.sh (adderrmsg): Added some tests for the above behavior.

2000-10-05  Larry Jones  <larry.jones@sdrc.com>

	* client.c (call_in_directory): Create CVSADM directory if it doesn't
	exist in the directory.  This makes client/server work more like
	standalone when checking out into an existing (non-CVS) directory.
	* sanity.sh (dirs2, conflicts3, toplevel): Update to match.

2000-10-03  Larry Jones  <larry.jones@sdrc.com>

	* filesubr.c (get_homedir): Ignore $HOME when running in server mode.

2000-10-02  Larry Jones  <larry.jones@sdrc.com>

	* cvs.h: Define (and use) T_PATCH as a valid file classification
	even when SERVER_SUPPORT isn't defined -- it simplifies the code.
	* classify.c (Classify_File): Ditto.
	* commit.c (check_fileproc): Ditto.
	* status.c (status_fileproc): Ditto.
	* update.c (update_fileproc): Ditto.
	* tag.c (check_fileproc): Accept T_PATCH in addition to T_CHECKOUT.
	* sanity.sh (tagc-10): Update to match.
